
[workspace]
members = [
    "crates/cli",
    "crates/freeze",
    "crates/python",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021 but not virtual workspaces.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paradigmxyz/cryo"
repository = "https://github.com/paradigmxyz/cryo"
exclude = [
    ".github/",
]

[profile.dev]
incremental = true
debug = 1
codegen-units = 32

