
[workspace]
members = ["crates/cli", "crates/freeze", "crates/to_df", "crates/python"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021 but not virtual workspaces.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paradigmxyz/cryo"
repository = "https://github.com/paradigmxyz/cryo"
exclude = [".github/"]

[workspace.dependencies]
anstyle = "1.0.4"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
clap_cryo = { version = "4.3.21-cryo", features = [
    "derive",
    "color",
    "unstable-styles",
] }
colored = "2.0.4"
color-print = "0.3.5"
ethers = { version = "2.0.10", features = ["rustls", "ws", "ipc"] }
ethers-core = "2.0.10"
ethers-reth = { path = "../ethers-reth" }
eyre = "0.6.8"
futures = "0.3.29"
governor = "0.6.0"
hex = "0.4.3"
heck = "0.4.1"
indexmap = "2.1.0"
indicatif = "0.17.7"
lazy_static = "1.4.0"
polars = { version = "0.35.4", features = [
    "parquet",
    "string_encoding",
    "polars-lazy",
    "lazy",
    "binary_encoding",
    "json",
    "dtype-struct",
] }
prefix-hex = "0.7.1"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-build-config = "0.20.0"
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
pyo3-polars = "0.9.0"
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0.191", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
thousands = "0.2.0"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "sync"] }

[profile.dev]
incremental = true
debug = 1
codegen-units = 32
