[package]
name = "cryo_freeze"
description = "cryo is the easiest way to extract blockchain data to parquet, csv, or json"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
ethers = { version = "2.0.7", features = ["rustls", "ws", "ipc"] }
ethers-core = "2.0.8"
futures = "0.3.28"
governor = "0.5.1"
indexmap = "2.0.0"
indicatif = "0.17.5"
polars = { version = "0.32.1", features = ["parquet", "string_encoding", "polars-lazy", "lazy", "binary_encoding", "json", "dtype-struct"] }
prefix-hex = "0.7.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "sync"] }

