[package]
name = "cryo_freeze"
description = "cryo is the easiest way to extract blockchain data to parquet, csv, or json"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
ethers = { workspace = true }
ethers-core = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
lazy_static = { workspace = true }
polars = { workspace = true }
prefix-hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
