[package]
name = "cryo_python"
version = "0.1.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cryo"
crate-type = ["cdylib"]

[dependencies]
cryo_cli = { version = "0.1.0", path = "../cli" }
cryo_freeze = { version = "0.1.0", path = "../freeze" }
polars = { version = "0.30.0", features = ["parquet", "string_encoding", "polars-lazy", "lazy", "binary_encoding", "json", "dtype-struct"] }
pyo3 = { version = "0.18.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.18.0", features = ["tokio-runtime"] }
pyo3-polars = "0.4.0"
tokio = "1.29.0"

[build-dependencies]
pyo3-build-config = "0.18.0"

