[package]
name = "cryo_python"
build = "build.rs"
description = "cryo python is a python library built on top of the rust cryo library"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cryo"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
cryo_cli = { version = "0.3.0", path = "../cli" }
cryo_freeze = { version = "0.3.0", path = "../freeze" }

polars = { workspace = true }
pyo3 = { workspace = true }
pyo3-asyncio = { workspace = true }
pyo3-polars = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true }
