[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "cryo_python"
description = "cryo is the easiest way to extract blockchain data to parquet, csv, json, or a python dataframe."
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
python-source = "python"
module-name = "cryo._cryo_rust"
features = ["pyo3/extension-module"]


[tool.mypy]
strict = true
files = ["python/cryo"]
enable_incomplete_feature = "Unpack"

