[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "cryo_python"
requires-python = ">=3.7"
dependencies = ["polars==*","pyarrow==*"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
pandas = ["pandas>=2.1.3"]

[tool.maturin]
python-source = "python"
module-name = "cryo._cryo_rust"
features = ["pyo3/extension-module"]


[tool.mypy]
strict = true
files = ["python/cryo"]
enable_incomplete_feature = "Unpack"

