[package]
name = "cryo_to_df"
description = "cryo_to_df is a procedural macro used for defining datasets"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "cryo_to_df"
path = "src/lib.rs"
proc-macro = true

[dependencies]
indexmap = { workspace = true }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
